[CREATE_MENU_BAR] link page and put image. [CERATE_PRODUCT] make table create dialog create product page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <nav>
+    <nav class="header">
         <div class="nav-left">
             <div class="logo">
                 <img class="profile-img" src="img/etoolz-mall-logo.png" alt="">
